--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,17 @@
 
 .main-header {
   margin-top: 60px;
+  font-family: 'Bangers', Arial, cursive;
 }
+
+.main-header h1 {
+  font-size: 5rem;
+}
+
 .main-header-text {
   margin-top: 30px;
+  font-family: 'Raleway', sans-serif;
+  font-size: 1.7rem;
 }
 .grid {
   display: flex;
@@ -22,16 +30,23 @@
 .grid-item {
   background-color: grey;
   outline: 1px solid white;
+  border-radius: 10px;
 }
 .barrier{
   background-color: brown;
 }
 .player1 {
-  background-color: white;
+background: url('../images/TemplarKnight.jpg') center/130px 100px no-repeat;
+box-shadow:  inset 0 0 10px #fff;
 }
 .player2 {
-  background-color: black;
+  background: url('../images/helmetBlack.jpg') center/130px 100px no-repeat;
+  box-shadow:  inset 0 0 10px #000;
 }
 .weapon {
   background-color: blue;
+}
+.grid-item:hover {
+  transform: scale(1.02, 1.02);
+  box-shadow: 0 0 15px #fff;
 }
