--- a/css/style.css
+++ b/css/style.css
@@ -57,10 +57,6 @@ background: url('../images/helmet.png') center/100px 70px no-repeat;
   box-shadow: 0 0 15px #000;
 }
 
-.spear {
-  background-image: url('../images/spear.png');
-}
-
 
 [data-weaponType='Spear'] {
   background-image: url('../images/spear.png');
@@ -109,4 +105,8 @@ background: url('../images/helmet.png') center/100px 70px no-repeat;
   height: 70px;
   border: 1px solid #000;
   margin: 10px auto;
+}
+
+.spear {
+  background: url('../images/spear.png') center/80px 60px no-repeat;
 }
