--- a/css/style.css
+++ b/css/style.css
@@ -43,13 +43,14 @@ body {
 }
 .player1 {
 background: url('../images/helmet.png') center/100px 70px no-repeat;
+box-shadow: inset 1px 1px 8px 8px rgba(25,194,65,1);
 }
 #player1 {
   background: url('../images/helmet.png') center/100px 70px no-repeat;
 }
 .player2 {
   background: url('../images/knight.png') center/90px 70px no-repeat;
-  /* box-shadow:  inset 0 0 10px #000; */
+  box-shadow: inset 1px 1px 8px 8px rgba(194,25,25,1);
 }
 #player2 {
   background: url('../images/knight.png') center/90px 70px no-repeat;
@@ -69,7 +70,7 @@ background: url('../images/helmet.png') center/100px 70px no-repeat;
   background: url('../images/spear.png') center/80px 60px no-repeat;
 }
 
-[data-weaponType='Bow and Arrow'] {
+[data-weaponType='Archery'] {
   background: url('../images/archery.png') center/80px 60px no-repeat;
 }
 
@@ -117,6 +118,6 @@ background: url('../images/helmet.png') center/100px 70px no-repeat;
   margin: 10px auto;
 }
 
-.spear {
-  background: url('../images/spear.png') center/80px 60px no-repeat;
+.pencil {
+  background: url('../images/pencil.png') center/80px 60px no-repeat;
 }
