Weapon Background problem fixed
Problem of the weapon sidebar image backgrounds is fixed. Works now when the player goes on the weapon tile and the player's image remains.

Also deleted the other old script.js file and added slight style to the winner's box at the end.

--- a/css/style.css
+++ b/css/style.css
@@ -185,4 +185,5 @@ box-shadow: inset 1px 1px 8px 8px rgba(25,194,65,1);
 
 .winnerSectionHeader {
   font-family: 'Bangers', Arial, cursive;
+  font-size: 6rem;
 }
