--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,22 @@ body {
   justify-content: center;
   align-items: center;
 }
+
 .grid-container {
+    display: grid;
+    grid-template-rows: repeat(10, 8vh);
+    grid-template-columns: repeat(10, 8vh);
+    grid-gap: 1px;
+    margin: auto 0;
+    padding: 3.8vh;
+    /* background-size: contain; */
+    position: relative;
+    /* margin-top: 50px;
+    margin-bottom: 30px; */
+}
+
+
+/* .grid-container {
   display: grid;
   grid-template-columns: 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px;
   grid-template-rows: 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px;
@@ -49,7 +64,7 @@ body {
   position: relative;
   margin-top: 50px;
   margin-bottom: 30px;
-}
+} */
 .grid-item {
   background-color: white;
   border: 1px solid #939393;
