--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
 
 .main-header {
   width: 100%;
-  height: 260px;
+  height: 230px;
   padding: 20px 0px 20px 0px;
   font-family: 'UnifrakturCook', Arial, sans-serif;
   background-color: rgb(34,139,34, 0.8);
@@ -16,14 +16,14 @@ body {
 }
 
 .main-header h1 {
-  font-size: 5rem;
+  font-size: 4.5rem;
   text-shadow: 5px 5px 4px rgba(0,0,0,0.67);
 }
 
 .main-header-text {
   margin-top: 30px;
   font-family: 'Raleway', sans-serif;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
 }
 
 .main-header-text-container {
@@ -43,7 +43,7 @@ body {
 .infoBox {
   border: 1px solid black;
   border-radius: 10px;
-  width: 30%;
+  min-width: 20%;
   height: 100%;
   font-size: 1.1rem;
   padding: 15px;
@@ -56,7 +56,7 @@ body {
 
 .infoBox ul li {
   list-style: none;
-  margin-left: -30px;
+  margin-left: -40px;
 }
 
 .turnText {
@@ -113,14 +113,14 @@ body {
 }
 .player1 {
 background: url('../images/helmet.png') center/60px 40px no-repeat;
-box-shadow: inset 1px 1px 8px 8px rgba(25,194,65,1);
+box-shadow: inset 1px 1px 5px 5px rgba(25,194,65,1);
 }
 #player1 {
   background: url('../images/helmet.png') center/60px 40px no-repeat;
 }
 .player2 {
   background: url('../images/knight.png') center/50px 40px no-repeat;
-  box-shadow: inset 1px 1px 8px 8px rgba(194,25,25,1);
+  box-shadow: inset 1px 1px 5px 5px rgba(194,25,25,1);
 }
 #player2 {
   background: url('../images/knight.png') center/50px 40px no-repeat;
@@ -228,6 +228,44 @@ box-shadow: inset 1px 1px 8px 8px rgba(25,194,65,1);
 
 /* MEDIA QUERIES */
 
+@media only screen and (min-width: 786px) and (max-width: 1100px) {
+
+  .player-stats {
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  .infoBox {
+    margin: 20px;
+    position: relative;
+  }
+
+  .weapon-pic {
+    margin: 10px;
+    position: absolute;
+    left: 230px;
+    bottom: 40px;
+    height: 50px;
+    width: 50px;
+  }
+
+  #infoBox_player1 {
+    flex-basis: 40%;
+    order: 1;
+  }
+
+  #infoBox_player2 {
+    flex-basis: 40%;
+    order: 1;
+  }
+
+  .grid {
+      order: 2;
+      flex-basis: 100%;
+      width: 100%;
+  }
+}
+
 @media only screen and (max-width: 786px) {
   .main-header {
     background-color: lightblue;
@@ -252,6 +290,7 @@ box-shadow: inset 1px 1px 8px 8px rgba(25,194,65,1);
   .player-stats {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
   }
 
   .infoBox {
@@ -259,6 +298,7 @@ box-shadow: inset 1px 1px 8px 8px rgba(25,194,65,1);
     height: 70%;
     min-width: 170px;
     font-size: 1rem;
+    margin: 20px 20px;
   }
 
   .infoBox h3 {
