--- a/css/style.css
+++ b/css/style.css
@@ -45,13 +45,13 @@ body {
   border-radius: 10px;
   min-width: 20%;
   height: 100%;
-  font-size: 1.1rem;
+  font-size: 1rem;
   padding: 15px;
   margin: 50px;
 }
 
 .infoBox h3 {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
 }
 
 .infoBox ul li {
@@ -65,8 +65,8 @@ body {
 }
 
 .weapon-pic {
-  width: 80px;
-  height: 80px;
+  width: 70px;
+  height: 70px;
   border: 1px solid #000;
   margin: 10px auto;
 }
@@ -116,14 +116,14 @@ background: url('../images/helmet.png') center/60px 40px no-repeat;
 box-shadow: inset 1px 1px 5px 5px rgba(25,194,65,1);
 }
 #player1 {
-  background: url('../images/helmet.png') center/60px 40px no-repeat;
+  background: url('../images/helmet.png') center/90px 70px no-repeat;
 }
 .player2 {
   background: url('../images/knight.png') center/50px 40px no-repeat;
   box-shadow: inset 1px 1px 5px 5px rgba(194,25,25,1);
 }
 #player2 {
-  background: url('../images/knight.png') center/50px 40px no-repeat;
+  background: url('../images/knight.png') center/80px 70px no-repeat;
   /* box-shadow:  inset 0 0 10px #000; */
 }
 .weapon {
@@ -170,7 +170,7 @@ box-shadow: inset 1px 1px 5px 5px rgba(25,194,65,1);
 }
 
 .modalText {
-  font-size: 45px;
+  font-size: 35px;
   font-family: 'Arimo', sans-serif;
 }
 
@@ -197,13 +197,13 @@ box-shadow: inset 1px 1px 5px 5px rgba(25,194,65,1);
   text-align: center;
   color: #000;
   position: relative;
-  margin-top: 50px;
-  margin-bottom: 30px;
+  margin: 50px auto 30px auto;
 }
 
 #player1_Winner {
-  background: url('../images/helmet.png') center/300px 250px no-repeat;
+  background: url('../images/helmet.png') center/250px 200px no-repeat;
   margin-left: -20px;
+  margin-bottom: 20px;
 }
 
 #player2_Winner {
@@ -284,12 +284,24 @@ box-shadow: inset 1px 1px 5px 5px rgba(25,194,65,1);
   }
 }
 
+@media only screen and (max-width: 930px) and (min-width: 786px) {
+
+  .main-header {
+    height: 230px;
+  }
+
+  .weapon-pic {
+    left: 150px;
+  }
+
+}
+
 @media only screen and (max-width: 786px) {
 
 
   .main-header {
     padding: 20px 0px 0px 0px;
-    height: 250px;
+    height: 200px;
     width: 100%;
   }
 
@@ -407,9 +419,14 @@ box-shadow: inset 1px 1px 5px 5px rgba(25,194,65,1);
 @media (max-width: 400px) {
 
   .grid-container {
-    grid-template-rows: repeat(10, 5vh);
-    grid-template-columns: repeat(10, 5vh);
+    grid-template-rows: repeat(10, 6vh);
+    grid-template-columns: repeat(10, 6vh);
     }
+
+  .main-header {
+    height: 180px;
+    margin-bottom: 10px;
+  }
 
   .main-header h1 {
     font-size: 2.7rem;
@@ -425,18 +442,15 @@ box-shadow: inset 1px 1px 5px 5px rgba(25,194,65,1);
     width: 90%;
   }
 
-  .main-header {
-    height: 170px;
-  }
-
   .infoBox {
     font-size: 0.7rem;
     margin: 10px;
     padding: 10px;
+    min-width: 110px;
   }
 
   .infoBox h3 {
-    font-size: 1rem;
+    font-size: 0.8rem;
   }
 
   .weapon-pic {
@@ -447,31 +461,31 @@ box-shadow: inset 1px 1px 5px 5px rgba(25,194,65,1);
   }
 
   .player1 {
-  background: url('../images/helmet.png') center/50px 30px no-repeat;
+  background: url('../images/helmet.png') center/40px 20px no-repeat;
   }
 
   .player2 {
-    background: url('../images/knight.png') center/40px 30px no-repeat;
+    background: url('../images/knight.png') center/30px 20px no-repeat;
   }
 
   .barrier{
-    background: url('../images/boulder.png') center/40px 25px no-repeat;
+    background: url('../images/boulder.png') center/30px 20px no-repeat;
   }
 
   [data-weaponType='Spear'] {
-    background: url('../images/spear.png') center/40px 30px no-repeat;
+    background: url('../images/spear.png') center/30px 20px no-repeat;
   }
 
   [data-weaponType='Archery'] {
-    background: url('../images/archery.png') center/40px 30px no-repeat;
+    background: url('../images/archery.png') center/30px 20px no-repeat;
   }
 
   [data-weaponType='Sword'] {
-    background: url('../images/sword.png') center/40px 30px no-repeat;
+    background: url('../images/sword.png') center/30px 20px no-repeat;
   }
 
   [data-weaponType='Ax'] {
-    background: url('../images/axe.png') center/50px 40px no-repeat;
+    background: url('../images/axe.png') center/40px 30px no-repeat;
   }
 
   [data-weaponType='Pencil'] {
