--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,21 @@ body {
 
 .main-header {
   width: 100%;
-  height: 230px;
+  height: 130px;
   padding: 20px 0px 20px 0px;
+  margin-bottom: 20px;
   font-family: 'UnifrakturCook', Arial, sans-serif;
   background-color: rgb(34,139,34, 0.8);
   color: #fff;
   display: block;
   position: relative;
+}
+
+.main-header-modal {
+  font-family: 'UnifrakturCook', Arial, sans-serif;
+  background-color: rgb(34,139,34, 0.8);
+  color: #fff;
+  width: 100%;
 }
 
 .main-header h1 {
@@ -21,16 +29,42 @@ body {
 }
 
 .main-header-text {
-  margin-top: 30px;
+  margin-top: 10px;
   font-family: 'Raleway', sans-serif;
   font-size: 1.2rem;
 }
 
-.main-header-text-container {
-  margin: 0 auto;
+#pencilModal {
+  height: 50px;
+  width: 50px;
+  margin-left: 45%;
+}
+
+.modalImageWeapons {
+  list-style-type: none;
   text-align: center;
-  width: 60%;
-  border-radius: 10px;
+  margin-top: 15px;
+}
+
+.modalImageWeapons li {
+  display: inline-block;
+  margin-right: 90px;
+  height: 50px;
+  width: 50px;
+}
+
+.modalImageWeapons li img {
+  height: 50px;
+  width: 50px;
+}
+
+.boulderModalImg {
+  text-align: center;
+}
+
+.boulderModalImg img {
+  height: 50px;
+  width: 70px;
 }
 
 .player-stats {
@@ -230,7 +264,7 @@ box-shadow: inset 1px 1px 5px 5px rgba(25,194,65,1);
 
 @media only screen and (max-width: 1100px) and (min-width: 786px) {
 
-  .main-header {
+  /* .main-header {
     height: 200px;
     width: 100%;
   }
@@ -241,7 +275,7 @@ box-shadow: inset 1px 1px 5px 5px rgba(25,194,65,1);
 
   .main-header-text {
     font-size: 1rem;
-  }
+  } */
 
   .player-stats {
     flex-wrap: wrap;
@@ -286,9 +320,9 @@ box-shadow: inset 1px 1px 5px 5px rgba(25,194,65,1);
 
 @media only screen and (max-width: 930px) and (min-width: 786px) {
 
-  .main-header {
+  /* .main-header {
     height: 230px;
-  }
+  } */
 
   .weapon-pic {
     left: 150px;
@@ -299,7 +333,7 @@ box-shadow: inset 1px 1px 5px 5px rgba(25,194,65,1);
 @media only screen and (max-width: 786px) {
 
 
-  .main-header {
+  /* .main-header {
     padding: 20px 0px 0px 0px;
     height: 200px;
     width: 100%;
@@ -317,7 +351,7 @@ box-shadow: inset 1px 1px 5px 5px rgba(25,194,65,1);
     font-size: 0.9rem;
     text-shadow: none;
     font-weight: bold;
-  }
+  } */
 
   .player-stats {
     display: flex;
