--- a/css/style.css
+++ b/css/style.css
@@ -150,14 +150,21 @@ background: url('../images/helmet.png') center/60px 40px no-repeat;
 box-shadow: inset 1px 1px 5px 5px rgba(25,194,65,1);
 }
 #player1 {
-  background: url('../images/helmet.png') center/90px 70px no-repeat;
+  background: url('../images/helmet.png') center/60px 40px no-repeat;
+}
+#player1Modal {
+  background: url('../images/helmet.png') center/120px 90px no-repeat;
 }
 .player2 {
   background: url('../images/knight.png') center/50px 40px no-repeat;
   box-shadow: inset 1px 1px 5px 5px rgba(194,25,25,1);
 }
 #player2 {
-  background: url('../images/knight.png') center/80px 70px no-repeat;
+  background: url('../images/knight.png') center/50px 40px no-repeat;
+  /* box-shadow:  inset 0 0 10px #000; */
+}
+#player2Modal {
+  background: url('../images/knight.png') center/90px 80px no-repeat;
   /* box-shadow:  inset 0 0 10px #000; */
 }
 .weapon {
