--- a/css/style.css
+++ b/css/style.css
@@ -105,13 +105,13 @@ body {
   margin: 10px auto;
 }
 
-#player1_weaponImage {
+/* #player1_weaponImage {
   background-size: contain;
 }
 
 #player2_weaponImage {
   background-size: contain;
-}
+} */
 
 
 .grid {
